# TemplateCppConsole

./: CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt  TemplateCppClassFixture.cpp  TemplateCppTests.cpp
TemplateCppLibrary/: CMakeLists.txt  TemplateCppClass.cpp  TemplateCppClass.h
